src/parser/generated/SesameParser.cpp

// Generated from SesameParser.g4 by ANTLR 4.7.1


#include "SesameParserListener.h"
#include "SesameParserVisitor.h"

#include "SesameParser.h"


#include <string.h>


using namespace antlrcpp;
using namespace parser;
using namespace antlr4;

SesameParser::SesameParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

SesameParser::~SesameParser() {
  delete _interpreter;
}

std::string SesameParser::getGrammarFileName() const {
  return "SesameParser.g4";
}

const std::vector<std::string>& SesameParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& SesameParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- Compilation_unitContext ------------------------------------------------------------------

SesameParser::Compilation_unitContext::Compilation_unitContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<SesameParser::Import_stmtContext *> SesameParser::Compilation_unitContext::import_stmt() {
  return getRuleContexts<SesameParser::Import_stmtContext>();
}

SesameParser::Import_stmtContext* SesameParser::Compilation_unitContext::import_stmt(size_t i) {
  return getRuleContext<SesameParser::Import_stmtContext>(i);
}

std::vector<SesameParser::Top_defContext *> SesameParser::Compilation_unitContext::top_def() {
  return getRuleContexts<SesameParser::Top_defContext>();
}

SesameParser::Top_defContext* SesameParser::Compilation_unitContext::top_def(size_t i) {
  return getRuleContext<SesameParser::Top_defContext>(i);
}


size_t SesameParser::Compilation_unitContext::getRuleIndex() const {
  return SesameParser::RuleCompilation_unit;
}

void SesameParser::Compilation_unitContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SesameParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterCompilation_unit(this);
}

void SesameParser::Compilation_unitContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SesameParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitCompilation_unit(this);
}


antlrcpp::Any SesameParser::Compilation_unitContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SesameParserVisitor*>(visitor))
    return parserVisitor->visitCompilation_unit(this);
  else
    return visitor->visitChildren(this);
}

SesameParser::Compilation_unitContext* SesameParser::compilation_unit() {
  Compilation_unitContext *_localctx = _tracker.createInstance<Compilation_unitContext>(_ctx, getState());
  enterRule(_localctx, 0, SesameParser::RuleCompilation_unit);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(125);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == SesameParser::S_IMPORT) {
      setState(122);
      import_stmt();
      setState(127);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(129); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(128);
      top_def();
      setState(131); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << SesameParser::S_VOID)
      | (1ULL << SesameParser::S_CHAR)
      | (1ULL << SesameParser::S_SHORT)
      | (1ULL << SesameParser::S_INT)
      | (1ULL << SesameParser::S_LONG)
      | (1ULL << SesameParser::S_STRUCT)
      | (1ULL << SesameParser::S_UNION)
      | (1ULL << SesameParser::S_STATIC)
      | (1ULL << SesameParser::S_CONST)
      | (1ULL << SesameParser::S_UNSIGNED)
      | (1ULL << SesameParser::S_TYPEDEF))) != 0) || _la == SesameParser::IDENTIFIER);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Declaration_fileContext ------------------------------------------------------------------

SesameParser::Declaration_fileContext::Declaration_fileContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<SesameParser::Import_stmtContext *> SesameParser::Declaration_fileContext::import_stmt() {
  return getRuleContexts<SesameParser::Import_stmtContext>();
}

SesameParser::Import_stmtContext* SesameParser::Declaration_fileContext::import_stmt(size_t i) {
  return getRuleContext<SesameParser::Import_stmtContext>(i);
}

std::vector<SesameParser::Func_declContext *> SesameParser::Declaration_fileContext::func_decl() {
  return getRuleContexts<SesameParser::Func_declContext>();
}

SesameParser::Func_declContext* SesameParser::Declaration_fileContext::func_decl(size_t i) {
  return getRuleContext<SesameParser::Func_declContext>(i);
}

std::vector<SesameParser::Var_declContext *> SesameParser::Declaration_fileContext::var_decl() {
  return getRuleContexts<SesameParser::Var_declContext>();
}

SesameParser::Var_declContext* SesameParser::Declaration_fileContext::var_decl(size_t i) {
  return getRuleContext<SesameParser::Var_declContext>(i);
}

std::vector<SesameParser::Def_constContext *> SesameParser::Declaration_fileContext::def_const() {
  return getRuleContexts<SesameParser::Def_constContext>();
}

SesameParser::Def_constContext* SesameParser::Declaration_fileContext::def_const(size_t i) {
  return getRuleContext<SesameParser::Def_constContext>(i);
}

std::vector<SesameParser::Def_structContext *> SesameParser::Declaration_fileContext::def_struct() {
  return getRuleContexts<SesameParser::Def_structContext>();
}

SesameParser::Def_structContext* SesameParser::Declaration_fileContext::def_struct(size_t i) {
  return getRuleContext<SesameParser::Def_structContext>(i);
}

std::vector<SesameParser::Def_unionContext *> SesameParser::Declaration_fileContext::def_union() {
  return getRuleContexts<SesameParser::Def_unionContext>();
}

SesameParser::Def_unionContext* SesameParser::Declaration_fileContext::def_union(size_t i) {
  return getRuleContext<SesameParser::Def_unionContext>(i);
}

std::vector<SesameParser::S_typedefContext *> SesameParser::Declaration_fileContext::s_typedef() {
  return getRuleContexts<SesameParser::S_typedefContext>();
}

SesameParser::S_typedefContext* SesameParser::Declaration_fileContext::s_typedef(size_t i) {
  return getRuleContext<SesameParser::S_typedefContext>(i);
}


size_t SesameParser::Declaration_fileContext::getRuleIndex() const {
  return SesameParser::RuleDeclaration_file;
}

void SesameParser::Declaration_fileContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SesameParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterDeclaration_file(this);
}

void SesameParser::Declaration_fileContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SesameParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitDeclaration_file(this);
}


antlrcpp::Any SesameParser::Declaration_fileContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SesameParserVisitor*>(visitor))
    return parserVisitor->visitDeclaration_file(this);
  else
    return visitor->visitChildren(this);
}

SesameParser::Declaration_fileContext* SesameParser::declaration_file() {
  Declaration_fileContext *_localctx = _tracker.createInstance<Declaration_fileContext>(_ctx, getState());
  enterRule(_localctx, 2, SesameParser::RuleDeclaration_file);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(136);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == SesameParser::S_IMPORT) {
      setState(133);
      import_stmt();
      setState(138);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(147);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << SesameParser::S_STRUCT)
      | (1ULL << SesameParser::S_UNION)
      | (1ULL << SesameParser::S_EXTERN)
      | (1ULL << SesameParser::S_CONST)
      | (1ULL << SesameParser::S_TYPEDEF))) != 0)) {
      setState(145);
      _errHandler->sync(this);
      switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 3, _ctx)) {
      case 1: {
        setState(139);
        func_decl();
        break;
      }

      case 2: {
        setState(140);
        var_decl();
        break;
      }

      case 3: {
        setState(141);
        def_const();
        break;
      }

      case 4: {
        setState(142);
        def_struct();
        break;
      }

      case 5: {
        setState(143);
        def_union();
        break;
      }

      case 6: {
        setState(144);
        s_typedef();
        break;
      }

      }
      setState(149);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Import_stmtContext ------------------------------------------------------------------

SesameParser::Import_stmtContext::Import_stmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* SesameParser::Import_stmtContext::S_IMPORT() {
  return getToken(SesameParser::S_IMPORT, 0);
}

SesameParser::Import_nameContext* SesameParser::Import_stmtContext::import_name() {
  return getRuleContext<SesameParser::Import_nameContext>(0);
}

tree::TerminalNode* SesameParser::Import_stmtContext::SEMI() {
  return getToken(SesameParser::SEMI, 0);
}


size_t SesameParser::Import_stmtContext::getRuleIndex() const {
  return SesameParser::RuleImport_stmt;
}

void SesameParser::Import_stmtContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SesameParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterImport_stmt(this);
}

void SesameParser::Import_stmtContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SesameParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitImport_stmt(this);
}


antlrcpp::Any SesameParser::Import_stmtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SesameParserVisitor*>(visitor))
    return parserVisitor->visitImport_stmt(this);
  else
    return visitor->visitChildren(this);
}

SesameParser::Import_stmtContext* SesameParser::import_stmt() {
  Import_stmtContext *_localctx = _tracker.createInstance<Import_stmtContext>(_ctx, getState());
  enterRule(_localctx, 4, SesameParser::RuleImport_stmt);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(150);
    match(SesameParser::S_IMPORT);
    setState(151);
    import_name();
    setState(152);
    match(SesameParser::SEMI);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Import_nameContext ------------------------------------------------------------------

SesameParser::Import_nameContext::Import_nameContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<SesameParser::NameContext *> SesameParser::Import_nameContext::name() {
  return getRuleContexts<SesameParser::NameContext>();
}

SesameParser::NameContext* SesameParser::Import_nameContext::name(size_t i) {
  return getRuleContext<SesameParser::NameContext>(i);
}

std::vector<tree::TerminalNode *> SesameParser::Import_nameContext::PERIOD() {
  return getTokens(SesameParser::PERIOD);
}

tree::TerminalNode* SesameParser::Import_nameContext::PERIOD(size_t i) {
  return getToken(SesameParser::PERIOD, i);
}


size_t SesameParser::Import_nameContext::getRuleIndex() const {
  return SesameParser::RuleImport_name;
}

void SesameParser::Import_nameContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SesameParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterImport_name(this);
}

void SesameParser::Import_nameContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SesameParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitImport_name(this);
}


antlrcpp::Any SesameParser::Import_nameContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SesameParserVisitor*>(visitor))
    return parserVisitor->visitImport_name(this);
  else
    return visitor->visitChildren(this);
}

SesameParser::Import_nameContext* SesameParser::import_name() {
  Import_nameContext *_localctx = _tracker.createInstance<Import_nameContext>(_ctx, getState());
  enterRule(_localctx, 6, SesameParser::RuleImport_name);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(154);
    name();
    setState(159);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == SesameParser::PERIOD) {
      setState(155);
      match(SesameParser::PERIOD);
      setState(156);
      name();
      setState(161);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- NameContext ------------------------------------------------------------------

SesameParser::NameContext::NameContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* SesameParser::NameContext::IDENTIFIER() {
  return getToken(SesameParser::IDENTIFIER, 0);
}


size_t SesameParser::NameContext::getRuleIndex() const {
  return SesameParser::RuleName;
}

void SesameParser::NameContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SesameParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterName(this);
}

void SesameParser::NameContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SesameParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitName(this);
}


antlrcpp::Any SesameParser::NameContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SesameParserVisitor*>(visitor))
    return parserVisitor->visitName(this);
  else
    return visitor->visitChildren(this);
}

SesameParser::NameContext* SesameParser::name() {
  NameContext *_localctx = _tracker.createInstance<NameContext>(_ctx, getState());
  enterRule(_localctx, 8, SesameParser::RuleName);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(162);
    match(SesameParser::IDENTIFIER);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Func_declContext ------------------------------------------------------------------

SesameParser::Func_declContext::Func_declContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* SesameParser::Func_declContext::S_EXTERN() {
  return getToken(SesameParser::S_EXTERN, 0);
}

SesameParser::TyperefContext* SesameParser::Func_declContext::typeref() {
  return getRuleContext<SesameParser::TyperefContext>(0);
}

SesameParser::NameContext* SesameParser::Func_declContext::name() {
  return getRuleContext<SesameParser::NameContext>(0);
}

tree::TerminalNode* SesameParser::Func_declContext::LPAREN() {
  return getToken(SesameParser::LPAREN, 0);
}

SesameParser::ParamsContext* SesameParser::Func_declContext::params() {
  return getRuleContext<SesameParser::ParamsContext>(0);
}

tree::TerminalNode* SesameParser::Func_declContext::RPAREN() {
  return getToken(SesameParser::RPAREN, 0);
}

tree::TerminalNode* SesameParser::Func_declContext::SEMI() {
  return getToken(SesameParser::SEMI, 0);
}


size_t SesameParser::Func_declContext::getRuleIndex() const {
  return SesameParser::RuleFunc_decl;
}

void SesameParser::Func_declContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SesameParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterFunc_decl(this);
}

void SesameParser::Func_declContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SesameParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitFunc_decl(this);
}


antlrcpp::Any SesameParser::Func_declContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SesameParserVisitor*>(visitor))
    return parserVisitor->visitFunc_decl(this);
  else
    return visitor->visitChildren(this);
}

SesameParser::Func_declContext* SesameParser::func_decl() {
  Func_declContext *_localctx = _tracker.createInstance<Func_declContext>(_ctx, getState());
  enterRule(_localctx, 10, SesameParser::RuleFunc_decl);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(164);
    match(SesameParser::S_EXTERN);
    setState(165);
    typeref();
    setState(166);
    name();
    setState(167);
    match(SesameParser::LPAREN);
    setState(168);
    params();
    setState(169);
    match(SesameParser::RPAREN);
    setState(170);
    match(SesameParser::SEMI);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Var_declContext ------------------------------------------------------------------

SesameParser::Var_declContext::Var_declContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* SesameParser::Var_declContext::S_EXTERN() {
  return getToken(SesameParser::S_EXTERN, 0);
}

SesameParser::TypeContext* SesameParser::Var_declContext::type() {
  return getRuleContext<SesameParser::TypeContext>(0);
}

SesameParser::NameContext* SesameParser::Var_declContext::name() {
  return getRuleContext<SesameParser::NameContext>(0);
}

tree::TerminalNode* SesameParser::Var_declContext::SEMI() {
  return getToken(SesameParser::SEMI, 0);
}


size_t SesameParser::Var_declContext::getRuleIndex() const {
  return SesameParser::RuleVar_decl;
}

void SesameParser::Var_declContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SesameParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterVar_decl(this);
}

void SesameParser::Var_declContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SesameParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitVar_decl(this);
}


antlrcpp::Any SesameParser::Var_declContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SesameParserVisitor*>(visitor))
    return parserVisitor->visitVar_decl(this);
  else
    return visitor->visitChildren(this);
}

SesameParser::Var_declContext* SesameParser::var_decl() {
  Var_declContext *_localctx = _tracker.createInstance<Var_declContext>(_ctx, getState());
  enterRule(_localctx, 12, SesameParser::RuleVar_decl);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(172);
    match(SesameParser::S_EXTERN);
    setState(173);
    type();
    setState(174);
    name();
    setState(175);
    match(SesameParser::SEMI);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Top_defContext ------------------------------------------------------------------

SesameParser::Top_defContext::Top_defContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

SesameParser::Def_funcContext* SesameParser::Top_defContext::def_func() {
  return getRuleContext<SesameParser::Def_funcContext>(0);
}

SesameParser::Def_varsContext* SesameParser::Top_defContext::def_vars() {
  return getRuleContext<SesameParser::Def_varsContext>(0);
}

SesameParser::Def_constContext* SesameParser::Top_defContext::def_const() {
  return getRuleContext<SesameParser::Def_constContext>(0);
}

SesameParser::Def_structContext* SesameParser::Top_defContext::def_struct() {
  return getRuleContext<SesameParser::Def_structContext>(0);
}

SesameParser::Def_unionContext* SesameParser::Top_defContext::def_union() {
  return getRuleContext<SesameParser::Def_unionContext>(0);
}

SesameParser::S_typedefContext* SesameParser::Top_defContext::s_typedef() {
  return getRuleContext<SesameParser::S_typedefContext>(0);
}


size_t SesameParser::Top_defContext::getRuleIndex() const {
  return SesameParser::RuleTop_def;
}

void SesameParser::Top_defContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SesameParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterTop_def(this);
}

void SesameParser::Top_defContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SesameParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitTop_def(this);
}


antlrcpp::Any SesameParser::Top_defContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SesameParserVisitor*>(visitor))
    return parserVisitor->visitTop_def(this);
  else
    return visitor->visitChildren(this);
}

SesameParser::Top_defContext* SesameParser::top_def() {
  Top_defContext *_localctx = _tracker.createInstance<Top_defContext>(_ctx, getState());
  enterRule(_localctx, 14, SesameParser::RuleTop_def);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(183);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 6, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(177);
      def_func();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(178);
      def_vars();
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(179);
      def_const();
      break;
    }

    case 4: {
      enterOuterAlt(_localctx, 4);
      setState(180);
      def_struct();
      break;
    }

    case 5: {
      enterOuterAlt(_localctx, 5);
      setState(181);
      def_union();
      break;
    }

    case 6: {
      enterOuterAlt(_localctx, 6);
      setState(182);
      s_typedef();
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Def_funcContext ------------------------------------------------------------------

SesameParser::Def_funcContext::Def_funcContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

SesameParser::TyperefContext* SesameParser::Def_funcContext::typeref() {
  return getRuleContext<SesameParser::TyperefContext>(0);
}

SesameParser::NameContext* SesameParser::Def_funcContext::name() {
  return getRuleContext<SesameParser::NameContext>(0);
}

tree::TerminalNode* SesameParser::Def_funcContext::LPAREN() {
  return getToken(SesameParser::LPAREN, 0);
}

tree::TerminalNode* SesameParser::Def_funcContext::RPAREN() {
  return getToken(SesameParser::RPAREN, 0);
}

SesameParser::BlockContext* SesameParser::Def_funcContext::block() {
  return getRuleContext<SesameParser::BlockContext>(0);
}

SesameParser::StorageContext* SesameParser::Def_funcContext::storage() {
  return getRuleContext<SesameParser::StorageContext>(0);
}

SesameParser::ParamsContext* SesameParser::Def_funcContext::params() {
  return getRuleContext<SesameParser::ParamsContext>(0);
}


size_t SesameParser::Def_funcContext::getRuleIndex() const {
  return SesameParser::RuleDef_func;
}

void SesameParser::Def_funcContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SesameParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterDef_func(this);
}

void SesameParser::Def_funcContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SesameParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitDef_func(this);
}

